...
                    IconButton({ searching = true }) {
                        Icon(Icons.Default.Search, "Search button")
                    }
                Column {
                    var menuExpanded by remember { mutableStateOf(false) }
                    IconButton({ menuExpanded = true }) {
                        Icon(Icons.Default.MoreVert, "Button to open mini menu")
                    }
                    var showSetting by remember { mutableStateOf(false) }
                    LaunchedEffect(showSetting) {
                        menuExpanded = false
                    }
                    DropdownMenu(
...
                    ) {
                        DropdownMenuItem(
                            text = { Text("Setting") },
                            onClick = { showSetting = true }
                        )
                        DropdownMenuItem(
                            text = { Text("About App") },
                            onClick = {
                                menuExpanded = false
                                onAboutClick()
                            }
                        )
                    }
...
